--- a/testsuite/domain/pom.xml
+++ b/testsuite/domain/pom.xml
@@ -49,6 +49,8 @@
         <xslt.scripts.dir>${basedir}/../integration/src/test/xslt</xslt.scripts.dir>
         <enforcer.skip>true</enforcer.skip>
         <jbossas.ts.dir>${basedir}/..</jbossas.ts.dir>
+
+        <ts.elytron.cli>../shared/enable-elytron.cli</ts.elytron.cli>
     </properties>
 
     <!--
@@ -238,9 +240,10 @@
                         <server.jvm.args>${surefire.system.args} ${jvm.args.ip.server} ${jvm.args.jacoco} ${jvm.args.other} ${jvm.args.timeouts} -Djbossas.ts.dir=${jbossas.ts.dir}</server.jvm.args>
                     </systemPropertyVariables>
                     <includes>
-                         <include>org/jboss/as/test/integration/respawn/*TestCase.java</include>
-                         <include>org/jboss/as/test/integration/domain/*TestCase.java</include>
-                         <include>org/jboss/as/test/integration/domain/suites/*TestSuite.java</include>
+                        <include>org/jboss/as/test/integration/respawn/*TestCase.java</include>
+                        <include>org/jboss/as/test/integration/domain/*TestCase.java</include>
+                        <include>org/jboss/as/test/integration/domain/suites/*TestSuite.java</include>
+                        <include>org/jboss/as/test/integration/domain/elytron/*TestCase.java</include>
                     </includes>
                 </configuration>
             </plugin>
@@ -305,6 +308,50 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>elytron.profile</id>
+            <activation>
+                <property>
+                    <name>elytron</name>
+                </property>
+                <file>
+                    <exists>${ts.elytron.cli}</exists>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>enable-elytron-cli</id>
+                                <phase>test-compile</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>${java.home}/bin/java</executable>
+                                    <arguments>
+                                        <argument>-jar</argument>
+                                        <argument>${project.build.directory}/jbossas/jboss-modules.jar</argument>
+                                        <argument>-mp</argument>
+                                        <argument>${jboss.dist}/modules</argument>
+                                        <argument>org.jboss.as.cli</argument>
+                                        <argument>--file=${ts.elytron.cli}</argument>
+                                    </arguments>
+                                    <environmentVariables>
+                                        <JBOSS_HOME>${project.build.directory}/jbossas</JBOSS_HOME>
+                                    </environmentVariables>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
     </profiles>
 
 </project>
