[JBEAP-10338] Upgrade to Apache CXF 3.1.11

--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
         <version.net.shibboleth.utilities.java-support>7.1.1.redhat-1</version.net.shibboleth.utilities.java-support>
         <version.org.apache.activemq.artemis>1.5.4.002-redhat-1</version.org.apache.activemq.artemis>
         <version.org.apache.avro>1.8.1.redhat-1</version.org.apache.avro>
-        <version.org.apache.cxf>3.1.10.redhat-1</version.org.apache.cxf>
+        <version.org.apache.cxf>3.1.11</version.org.apache.cxf>
         <version.org.apache.cxf.xjcplugins>3.0.5.redhat-1</version.org.apache.cxf.xjcplugins>
         <version.org.apache.ds>2.0.0-M20</version.org.apache.ds>
         <version.org.apache.httpcomponents.httpasyncclient>4.1.2.redhat-1</version.org.apache.httpcomponents.httpasyncclient>
@@ -132,7 +132,7 @@
         <version.org.apache.neethi>3.0.3.redhat-1</version.org.apache.neethi>
         <version.org.apache.santuario>2.0.8.redhat-1</version.org.apache.santuario>
         <version.org.apache.velocity>1.7.0.redhat-5</version.org.apache.velocity>
-        <version.org.apache.ws.security>2.1.8.redhat-1</version.org.apache.ws.security>
+        <version.org.apache.ws.security>2.1.9</version.org.apache.ws.security>
         <version.org.apache.ws.xmlschema>2.2.1.redhat-1</version.org.apache.ws.xmlschema>
         <version.org.apache.xalan>2.7.1.redhat-11</version.org.apache.xalan>
         <version.org.bouncycastle>1.56.0.redhat-2</version.org.bouncycastle>
