--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -338,6 +338,7 @@ server.incoming-interceptors.module=The name of the module that provides the int
 server.jmx-domain=The JMX domain used to register internal ActiveMQ MBeans in the MBeanServer.
 server.jmx-management-enabled=Whether ActiveMQ should expose its internal management API via JMX. This is not recommended, as accessing these MBeans can lead to inconsistent configuration.
 server.journal-bindings-table=Name of the JDBC table to store the bindings.
+server.journal-jms-bindings-table=Name of the JDBC table to store the JMS bindings.
 server.journal-buffer-size=The size of the internal buffer on the journal.
 server.journal-buffer-timeout=The timeout (in nanoseconds) used to flush internal buffers on the journal.
 server.journal-compact-min-files=The minimal number of journal data files before we can start compacting.
