--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -346,6 +346,7 @@ server.journal-compact-percentage=The percentage of live data on which we consid
 server.journal-datasource=Name of the DataSource for the JDBC store.
 server.journal-database=Type of the database (can be used to customize SQL statements). If this attribute is not specified, the type of the database will be determined based on the DataSource metadata.
 server.journal-file-size=The size (in bytes) of each journal file.
+server.journal-jdbc-network-timeout=The timeout used by the JDBC connection to detect network issues.
 server.journal-large-messages-table=Name of the JDBC table to store the large messages.
 server.journal-max-io=The maximum number of write requests that can be in the AIO queue at any one time.
 server.journal-messages-table=Name of the JDBC table to store the messages.
