JBEAP-10175 JBEAP-10174 Unmanaged transitive dependencies in EJB client BOM dependency tree

--- a/client/ejb/pom.xml
+++ b/client/ejb/pom.xml
@@ -106,6 +106,25 @@
             <artifactId>wildfly-elytron</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.wildfly.discovery</groupId>
+            <artifactId>wildfly-discovery-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.wildfly.transaction</groupId>
+            <artifactId>wildfly-transaction-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wildfly.client</groupId>
+            <artifactId>wildfly-client-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.spec.javax.resource</groupId>
+            <artifactId>jboss-connector-api_1.7_spec</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
