WFLY-8651 Update check interval message

--- a/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
+++ b/undertow/src/main/resources/org/wildfly/extension/undertow/LocalDescriptions.properties
@@ -215,7 +215,7 @@ undertow.setting.jsp.keep-generated=Keep the generated Servlets.
 undertow.setting.jsp.trim-spaces=Trim some spaces from the generated Servlet.
 undertow.setting.jsp.tag-pooling=Enable tag pooling.
 undertow.setting.jsp.mapped-file=Map to the JSP source.
-undertow.setting.jsp.check-interval=Check interval for JSP updates using a background thread.
+undertow.setting.jsp.check-interval=Check interval for JSP updates using a background thread. This has no effect for most deployments where JSP change notifications are handled using the File System notification API. This only takes effect if the file watch service is disabled.
 undertow.setting.jsp.modification-test-interval=Minimum amount of time between two tests for updates, in seconds.
 undertow.setting.jsp.recompile-on-fail=Retry failed JSP compilations on each request.
 undertow.setting.jsp.smap=Enable SMAP.
