WFLY-8654 mod_cluster stop/stop-context(waittime=..) attribute description is wrong

--- a/mod_cluster/extension/src/main/resources/org/wildfly/extension/mod_cluster/LocalDescriptions.properties
+++ b/mod_cluster/extension/src/main/resources/org/wildfly/extension/mod_cluster/LocalDescriptions.properties
@@ -20,13 +20,13 @@ modcluster.enable-context.context=Name of the context to enable.
 modcluster.stop-context=Tell reverse proxies that the context can't process requests.
 modcluster.stop-context.virtualhost=Name of the virtual host to stop the context on.
 modcluster.stop-context.context=Name of the context to stop.
-modcluster.stop-context.waittime=Timeout to wait for the context to stop.
+modcluster.stop-context.waittime=Number of seconds for which to wait for sessions to drain before stopping the context if session draining is in effect. Negative or zero timeout value will wait indefinitely.
 modcluster.disable-context=Tell reverse proxies that the context can't process new requests.
 modcluster.disable-context.virtualhost=Name of the virtual host to disable context on.
 modcluster.disable-context.context=Name of the context to disable.
 modcluster.enable=Tell reverse proxies that all contexts on the node are ready to receive requests.
 modcluster.stop=Tell reverse proxies that all contexts on the node can't process requests.
-modcluster.stop.waittime=Timeout to wait for all contexts to stop.
+modcluster.stop.waittime=Number of seconds for which to wait for sessions to drain before stopping all contexts if session draining is in effect. Negative or zero timeout value will wait indefinitely.
 modcluster.disable=Tell reverse proxies that all contexts of the node can't process new requests.
 # configuration
 modcluster.mod-cluster-config=Defines configuration resource.
