--- a/undertow/pom.xml
+++ b/undertow/pom.xml
@@ -91,6 +91,10 @@
             <artifactId>jastow</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.wildfly.wildfly-http-client</groupId>
+            <artifactId>wildfly-http-client-common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.wildfly.core</groupId>
             <artifactId>wildfly-subsystem-test</artifactId>
             <type>pom</type>
