Revert "[WFLY-8559] Added DWM test with multiple cases - Fixed a few logic errors in DwmTest and removed a deprecated test case"
This reverts commit a9fccac0303d443758f06c84d8912f4f90f5b5cc.

--- a/testsuite/integration/basic/pom.xml
+++ b/testsuite/integration/basic/pom.xml
@@ -70,6 +70,25 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-antrun-plugin</artifactId>
                         <executions>
+                            <!-- Copy in some jars. -->
+                            <execution>
+                                <id>prepare-jars-basic-integration.server</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <property name="tests.resources.dir" value="${basedir}/../src/test/resources"/>
+                                        <property name="tests.output.dir" value="${project.build.directory}"/>
+                                        <ant antfile="${basedir}/../src/test/scripts/basic-integration-build.xml">
+                                            <target name="build-basic-integration"/>
+                                            <!-- TODO: Unify names, then call "recursively". -->
+                                        </ant>
+                                    </target>
+                                </configuration>
+                            </execution>
+
                             <!-- Prepare two servers for distributed workmanager scenarios. -->
                             <!-- one should be in target/jbossas-distributed-0 the other in target/jbossas-distributed-1 -->
                             <execution>
@@ -80,7 +99,7 @@
                                 </goals>
                                 <configuration>
                                     <target>
-                                        <ant antfile="${basedir}/../src/test/scripts/integration-ha-build.xml">
+                                        <ant antfile="${basedir}/../src/test/scripts/basic-integration-build.xml">
                                             <target name="build-distributed"/>
                                         </ant>
                                     </target>
