[WFLY-8720] Unignore and fix tests for switching identities in Elytron

--- a/testsuite/integration/elytron/src/test/resources/org/wildfly/test/integration/elytron/ejb/web.xml
+++ b/testsuite/integration/elytron/src/test/resources/org/wildfly/test/integration/elytron/ejb/web.xml
@@ -5,12 +5,8 @@
          version="3.0">
 
     <login-config>
-        <auth-method>FORM</auth-method>
+        <auth-method>BASIC</auth-method>
         <realm-name>file</realm-name>
-        <form-login-config>
-            <form-login-page>/login.jsp</form-login-page>
-            <form-error-page>/error.jsp</form-error-page>
-        </form-login-config>
     </login-config>
 
     <security-role>
